examples/test/testpolicy13682.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13682
  namespace: namespace11
spec:
  podSelector:
    matchLabels:
      key13: value1
      key44: value41
      key26: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value6
          key22: value44
      podSelector:
        matchLabels:
          key8: value11
          key35: value28
